# opendeck-starterpack

./: Cargo.toml  README.md  build.ts  rustfmt.toml
files/: manifest.json
files/propertyInspector/: commandToggle.js  inputSimulation.html  pressKeys.html  runCommand.html  runCommandToggle.html  sdpi.css  switchProfile.html  switchProfile.js  updown.js
src/: input_simulation.rs  main.rs  press_keys.rs  run_command.rs  run_command_toggle.rs  switch_profile.rs
