[package]
name = "opendeck-starterpack"
authors = [ "ninjadev64" ]
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

[dependencies]
enigo = { git = "https://github.com/enigo-rs/enigo", rev = "390f69d", features = [ "x11rb" ] }
log = "0.4.21"
openaction = { path = "../openaction-rs" }
serde = "1.0.197"
serde_json = "1.0.115"
simplelog = "0.12.2"
tokio = { version = "1.37.0", features = [ "full" ] }
tungstenite = "0.21.0"
