[package]
name = "opendeck-starterpack"
authors = ["ninjadev64"]
version = "1.4.0"
edition = "2021"
license = "MIT"

[dependencies]
openaction = "1.1"
log = "0.4"
simplelog = "0.12"
serde = "1.0"
serde_json = "1.0"
ron = "0.8"
enigo = { version = "0.3", features = ["serde", "x11rb"] }
tokio = { version = "1.42", features = ["full"] }
tungstenite = "0.26"
os_pipe = "1.2"
